[tool.poetry]
packages = [{ include = "app" }]

[project]
name = "member-registry-api"
version = "0.1.0"
description = "A standalone Member Registry API Service built with FastAPI"
authors = [
    {name = "jagthefriend"}
]
license = "MIT"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)"
]
